--- a/CS191/Lectures/lecture2.tex
+++ b/CS191/Lectures/lecture2.tex
@@ -74,7 +74,7 @@ in a classical sense too, with correlated coin flips that are rotated.
 
 To go beyond classical computation, we consider two qubit measurements.
 The first player measures in the standard basis and the second player measures in a new basis, $\{ \ket{v}, \ket{v^{\perp}} \}$, rotated at an angle $\theta$ from the standard basis.
-The probability that these two measurements are inequal is $\sin^2 \theta$ (for example, if the first measurement is $0$, then the state $\ket{00}$, so the component of $\ket{v}$ in the $\ket{0}$ direction is $\cos \theta$).
+The probability that these two measurements are unequal is $\sin^2 \theta$ (for example, if the first measurement is $0$, then the state is $\ket{00}$, so the component of $\ket{v}$ in the $\ket{0}$ direction is $\cos \theta$).
 
 However, classically, the probability that one observes a different outcome is proportional to $\theta$.
 
