--- a/CS191/Lectures/lecture3.tex
+++ b/CS191/Lectures/lecture3.tex
@@ -156,7 +156,7 @@ this just inverts the circuit. Let us add a measurement apparatus:
     & \targ & \qw & \qw & \qw & \meter{} & \qw
 \end{quantikz}
 
-Now, we can measure in other basis, JUST using our module for measuring the standard basis. This means without loss of generality we can measure in any basis.
+Now, we can measure in the Bell-state basis with \emph{just} using our module for measuring the standard basis. This means without loss of generality we can measure in any basis.
 
 \subsection{Intuition for Entanglement}
 We know that:
