--- a/CS191/Lectures/lecture4.tex
+++ b/CS191/Lectures/lecture4.tex
@@ -4,7 +4,7 @@
 \subsection{The Tensor Product}
 Remember that we ``multiplied'' two states $\ket{0} \ket{0} = \ket{00}$. This combined two 2-state systems into a 4-state system.
 But what is this mystical multiplication? The answer is the \textbf{tensor product}, denoted by the symbol $\otimes$. Really, it would be proper to say $\ket{0} \otimes \ket{0} = \ket{00}$,
-in which we ``call'' the tensor product this nickname. We also that saw we could identify $\ket{00}, \ket{01}, \ket{10}, \ket{11}$ with vectors in $\C^4$,
+in which we ``call'' the tensor product this nickname. We also saw that we could identify $\ket{00}, \ket{01}, \ket{10}, \ket{11}$ with vectors in $\C^4$,
 in this sense, we say $\C^2 \otimes \C^2 \cong \C^4$, i.e. the spaces are isomorphic.
 
 In a general setting, letting $\mathcal{H}_1$ be a system with $k$ levels and $\mathcal{H}_2$ be a system with $\ell$ levels, we say
