--- a/CS191/Lectures/lecture7.tex
+++ b/CS191/Lectures/lecture7.tex
@@ -112,9 +112,11 @@ columns are the even-indexed columns (0-indexing) and the rest are odd-indexed c
     FT_{M/2} & \omega^j FT_{M/2} \\
     FT_{M/2} & -\omega^j FT_{M/2}
 \end{pmatrix} \]
-where $\alpha^j A$ means to multiply the $j$ row of $A$ by $\alpha^j$. To show this, let's consider the four quadrants.
+where $\alpha^j A$ means to multiply the $j$th row of $A$ by $\alpha^j$. To show this, let's consider the four quadrants.
 Call $j$ the row, $\ell$ the column, and $k$ some integer satisfying $0 \leq k < M/2$. We will only do two cases for simplicity,
 the rest are similar.
 If you're in the top left, e.g. if $0 \leq j < M/2$ and $\ell = 2k$, then the entry is $\omega_M^{2jk} = \omega_{M/2}^{jk}$, i.e. the correct entry in the top left.
 If you're in the bottom right, e.g. if $M/2 \leq j < M$ and $\ell = 2k + 1$. Let $j' = j - M/2$, then
-the entry is $\omega^{(2k + 1) (j' + M/2)} = \omega^{2kj' + 2k + kM + M/2} = \omega_{M/2}^{kj'} \omega^{M/2 + 2k}$
+the entry is
+\[ \omega^{(2k + 1) (j' + M/2)} = \omega^{2kj' + kM + j' + M/2} = \omega^{kM} \omega_{M/2}^{kj'} \omega^{M/2 + j'} = \omega^{-j'} \omega_{M/2}^{kj'}\]
+This proves the claim.
