--- a/CS191/Lectures/lecture7.tex
+++ b/CS191/Lectures/lecture7.tex
@@ -118,5 +118,5 @@ the rest are similar.
 If you're in the top left, e.g. if $0 \leq j < M/2$ and $\ell = 2k$, then the entry is $\omega_M^{2jk} = \omega_{M/2}^{jk}$, i.e. the correct entry in the top left.
 If you're in the bottom right, e.g. if $M/2 \leq j < M$ and $\ell = 2k + 1$. Let $j' = j - M/2$, then
 the entry is
-\[ \omega^{(2k + 1) (j' + M/2)} = \omega^{2kj' + kM + j' + M/2} = \omega^{kM} \omega_{M/2}^{kj'} \omega^{M/2 + j'} = \omega^{-j'} \omega_{M/2}^{kj'}\]
+\[ \omega^{(2k + 1) (j' + M/2)} = \omega^{2kj' + kM + j' + M/2} = \omega^{kM} \omega_{M/2}^{kj'} \omega^{M/2 + j'} = -\omega^{j'} \omega_{M/2}^{kj'}\]
 This proves the claim.
