--- a/CS191/Lectures/lecture7.tex
+++ b/CS191/Lectures/lecture7.tex
@@ -30,7 +30,7 @@ This makes the circuit altogether:
 \begin{center}
 \begin{quantikz}
     \lstick{$\ket{0^n}$} & \gate{H^{\otimes n}} & \gate[wires=2]{U_f} & \gate{H^{\otimes n}} & \meter{} & \gate{\text{Gaussian Elim.}}\\
-    \lstick{$\ket{0^n}$} & \qw & & \qw \meter{}
+    \lstick{$\ket{0^n}$} & \qw & & \qw & \meter{}
 \end{quantikz}
 \end{center}
 
@@ -67,7 +67,7 @@ by a special Vandemonde matrix, called the Discrete Fourier Transform (DFT).
     \beta_0 \\ \beta_1 \\ \vdots \\ \beta_{M - 1}
 \end{pmatrix} = \begin{pmatrix}
     1 & 1 & \dots & 1 \\
-    1 & \omega & \omega^2 & \dots & \omega^{M - 1} \\
+    1 & \omega & \dots & \omega^{M - 1} \\
     \vdots & \vdots & \vdots & \vdots \\
     1 & \omega^{M - 1} & \dots & \omega^{(M - 1)(M - 1)}
 \end{pmatrix} \]
@@ -77,7 +77,7 @@ use quantum bases, so we'll work with this slightly different definition:
     \beta_0 \\ \beta_1 \\ \vdots \\ \beta_{M - 1}
 \end{pmatrix} = \frac{1}{\sqrt{M}} \begin{pmatrix}
     1 & 1 & \dots & 1 \\
-    1 & \omega & \omega^2 & \dots & \omega^{M - 1} \\
+    1 & \omega & \dots & \omega^{M - 1} \\
     \vdots & \vdots & \vdots & \vdots \\
     1 & \omega^{M - 1} & \dots & \omega^{(M - 1)(M - 1)}
 \end{pmatrix} \]
