--- a/CS191/lectures.tex
+++ b/CS191/lectures.tex
@@ -11,4 +11,5 @@
     \include{Lectures/lecture6.tex}
     \include{Lectures/lecture7.tex}
     \include{Lectures/lecture8.tex}
+    \include{Lectures/lecture9.tex}
 \end{document}
