--- a/CS191/Lectures/lecture7.tex
+++ b/CS191/Lectures/lecture7.tex
@@ -3,34 +3,36 @@
 
 \subsection{Simon's Algorithm}
 We discuss Simon's algorithm: another quantum protocol that solves a toy problem. The setup is as follows.
-Suppose there is a black-box $f: \{0, 1\}^n \to S \subseteq \{0, 1\}^n$ that is two to one in a specific way: for a fixed string $s$, $f(x) = f(x \oplus s)$,
+Suppose there is a black-box $f: \{0, 1\}^n \to S \subseteq \{0, 1\}^n$ that is two to one in a specific way: for a fixed string $s$, $f(x) = f(x \oplus s)$ for all $x \in \{0, 1\}^n$,
 where the $\oplus$ is vector addition mod 2. Our challenge is to find $s$.
 
 Classically, there are $2^n$ possibilities for $s$, so if we query $x \neq x'$ and get $f(x) \neq x'$ we can only
 cross out one possibility for $s$ ($x \oplus x'$). So in the worst case, it takes $2^n$ tries. On average, due to the Birthday paradox,
-the runtime is actually the square root of this, $2^{n/2}$.
+the runtime is actually the square root of this, $2^{n/2}$. However, the runtime is still exponential. Let's switch over to the quantum world to see if we can speed things up.
 
 Here is a quantum algorithm that solves the same problem (with some randomness tossed in as well). Let $a \in_R A$ denote that $a$ is uniformly chosen
 from $A$. Here is a brief roadmap of the steps we will take.
 \begin{enumerate}
     \item Set up superposition:
-    \[ r \in_R \{0, 1\}^n, \ket{\psi} = \ftwo \ket{r} + \ftwo \ket{r \oplus s} \]
+    \[ r \in_R \{0, 1\}^n, \quad \ket{\psi} = \ftwo \ket{r} + \ftwo \ket{r \oplus s} \]
     \item Perform Fourier sampling on $\ket{\psi}$, i.e. apply $H^{\otimes n}$, and measure. We claim that this yields uniformly random $a \in \{0, 1\}^n$ such that $a \cdot s = 0$.
     \item Wait until we get $n - 1$ equations. Solve the linear equations for $s$. This takes time polynomial in $n$, classically.
     \item Check if the solution you got to the system is correct by checking if $f(0) = f(s)$. Repeat the algorithm if not.
 \end{enumerate}
-In the last step, the reason we use $n - 1$ equations is that we will always have at least two solutions, $0$ and $s$, so no $n$ equations can all be independent.
+In the last step, the reason we use $n - 1$ equations is that we will always have at least two solutions ($0$ and $s$), so no $n$ equations can all be independent.
 
-Let's figure out how to set up a suitable superposition for step 1. Let's first apply a Hadamard to $\ket{0}$
-to make $\frac{1}{\sqrt{2^n}}\sum_x \ket{x}$. Then, if we apply the function, we recall this just tensor products with the function output. Upon measurement on those function qubits
-as $f(r)$:
+Let's figure out how to set up a suitable superposition for step 1. We first apply a Hadamard to $\ket{0}$
+to make $\frac{1}{\sqrt{2^n}}\sum_x \ket{x}$. Then, if we apply the function $f$, we recall this just tensor products with the function output. Upon measurement on those function qubits
+as $f(r)$, we get the desired output in the 1st register (i.e. first part of the output):
 \[ \frac{1}{\sqrt{2^n}} \sum_x \ket{x} \ket{f(x)} \mapsto \ftwo \ket{r} + \ftwo \ket{r \oplus s}  \]
-This makes the circuit altogether:
+as upon measuring $f(r)$, the value in the 1st register is $\ket{r}$ or $\ket{r \oplus s}$ with equal probability.
+
+Thus, the circuit looks as follows:
 
 \begin{center}
 \begin{quantikz}
-    \lstick{$\ket{0^n}$} & \gate{H^{\otimes n}} & \gate[wires=2]{U_f} & \gate{H^{\otimes n}} & \meter{} & \gate{\text{Gaussian Elim.}}\\
-    \lstick{$\ket{0^n}$} & \qw & & \qw & \meter{}
+    \lstick{$\ket{0^n}$} & \gate{H^{\otimes n}}\qwbundle[alternate]{} & \gate[wires=2]{U_f}\qwbundle[alternate]{} & \gate{H^{\otimes n}}\qwbundle[alternate]{} & \meter{}\qwbundle[alternate]{} &\gate{\text{Gaussian Elim.}}\qwbundle[alternate]{}\\
+    \lstick{$\ket{0^n}$} & \qwbundle[alternate]{} & \qwbundle[alternate]{} & \qwbundle[alternate]{} & \meter{}\qwbundle[alternate]{}
 \end{quantikz}
 \end{center}
 
@@ -52,27 +54,27 @@ Finally, note that the measurement made the math a lot easier, but by the princi
 
 \subsection{Quantum Fourier Transform}
 Recall the roots of unity over $\C$.
-\begin{note}[Roots of unity]
+\begin{note}[Roots of Unity]
     An $M$th root of unity is a complex number $z$ such that $z^M = 1$.
     The primitive $M$th root of unity $\omega$ is
     \[ \omega = e^{2\pi i/M} = \cos \frac{2\pi}{M} + i \sin \frac{2\pi}{M} \]
-    Furthermore, any $M$th root of unity can be written as $\omega^k$ for $1 \leq k \leq M$.
+    Furthermore, any $M$th root of unity can be written as $\omega^k$ for $0 \leq k < M$.
 \end{note}
 
 The Fourier transform is just the act of applying a polynomial on roots of unity.
 Suppose you have a polynomial $\alpha(x) = \sum_{j = 0}^{M - 1} \alpha_j x^j$. Then we can
 write $\beta_k = \alpha(\omega_k)$, which can be expanded and written as multiplication
-by a special Vandemonde matrix, called the Discrete Fourier Transform (DFT).
+by a special Vandemonde matrix, called the \textbf{Discrete Fourier Transform (DFT)}.
 \[ \begin{pmatrix}
     \beta_0 \\ \beta_1 \\ \vdots \\ \beta_{M - 1}
-\end{pmatrix} = \begin{pmatrix}
+\end{pmatrix} = \underbrace{\begin{pmatrix}
     1 & 1 & \dots & 1 \\
     1 & \omega & \dots & \omega^{M - 1} \\
     \vdots & \vdots & \vdots & \vdots \\
     1 & \omega^{M - 1} & \dots & \omega^{(M - 1)(M - 1)}
-\end{pmatrix} \]
-We added a normalizing factor because we want to 
-use quantum bases, so we'll work with this slightly different definition:
+\end{pmatrix}}_{\text{DFT Matrix}} \]
+We add a normalizing factor because we want to 
+use quantum bases, so we'll work with a slightly different definition:
 \[ \begin{pmatrix}
     \beta_0 \\ \beta_1 \\ \vdots \\ \beta_{M - 1}
 \end{pmatrix} = \frac{1}{\sqrt{M}} \begin{pmatrix}
@@ -82,10 +84,10 @@ use quantum bases, so we'll work with this slightly different definition:
     1 & \omega^{M - 1} & \dots & \omega^{(M - 1)(M - 1)}
 \end{pmatrix} \]
 The naive algorithm to do this matrix-vector multiplication is $O(M^2)$, but there is a
-divide-and-conquer algorithm (the FFT) that can do this much faster, in $O(M \log M)$ time.
-The Quantum Fourier Transform can do this in $\tilde{O}(\log M)$,
+divide-and-conquer algorithm called the \textbf{Fast Fourier Transform (FFT)} that can do this much faster—in $O(M \log M)$ time.
+The \textbf{Quantum Fourier Transform (QFT)} can do this in $\tilde{O}(\log M)$,
 where $\tilde{O}$ hides poly-log factors. We will show a simple way to $O(\log^2 M)$. However,
-there is a big caveat, we know the answer takes $M$ time to even write down.
+there is a big caveat: we know the answer takes $M$ time to even write down.
 The reason QFT can go faster is that since the QFT gives you a quantum state,
 you only get a single index $j$ upon any actual measurement; the FFT gives you the entire answer!
 
@@ -96,15 +98,16 @@ Suppose inductively that we knew how to apply the $QFT_{M/2}$. Then to apply $QF
 
 \begin{center}
 \begin{quantikz}
-    \lstick[wires=3]{qubit $1 \dots m - 1$} & \gate[3]{QFT_{M/2}} & \phase{\omega^0} & \qw & \qw  \\ 
-    & & \qw & \phase{\omega^j} & \qw & \qw  \\
-    & & \qw & \qw & \phase{\omega^{m - 1}}\qw & \qw & \qw \\
-    \lstick{qubit $m$} & \qw & \ctrl{-3} & \ctrl{-2} & \ctrl{-1}& \gate{H} 
+    \lstick[wires=5]{qubits $1 \dots m - 1$} & \gate[wires=5, nwires={2,4}]{QFT_{M/2}} & \phase{\omega^0} & \qw & \qw & \qw & \qw & \qw \\ 
+    \vdots & & & \ddots & & \\
+    & \qw & \qw & \qw & \phase{\omega^j} & \qw & \qw & \qw \\
+    \vdots & & & & & \ddots \\
+    & \qw & \qw & \qw & \qw & \qw & \phase{\omega^{m - 1}}\qw & \qw & \\
+    \lstick{qubit $m$} & \qw & \ctrl{-5} & \qw & \ctrl{-3} & \qw & \ctrl{-1}& \gate{H} 
 \end{quantikz}
 \end{center}
 
-Note that 
-Unrolling the recursion, and calling $QFT_0$ the identity, it's clear that the runtime is:
+Note that unrolling the recursion, and calling $QFT_0$ the identity, it's clear that the runtime is:
 \[ 1 + 2 + \dots + (m - 1) + m = O(m^2) \]
 Now to prove correctness, consider the FT matrix. We reorder the columns so the first $M/2$
 columns are the even-indexed columns (0-indexing) and the rest are odd-indexed columns. Then
