--- a/CS191/Lectures/lecture9.tex
+++ b/CS191/Lectures/lecture9.tex
@@ -97,7 +97,7 @@ vector to $\ket{a}$ in this plane. Now, geometrically, this is what Grover's doe
 % We start in the state $\ket{u}$,
 % and the $U_f$ flipping step reflects about $\ket{e}$. Then, we only institute what is essentially a phase flip about $\ket{u}$. 
 One can think of steps 2-3 as walking $\ket{u}$ towards $\ket{a}$. The angle between $\ket{u}$ and $\ket{e}$ is $\theta = \sin^{-1} \frac{1}{\sqrt{N}} \approx \frac{1}{\sqrt{N}}$.
-After one iteration, the new angle becomes $\theta + 2 \theta = 3 \theta$, and the angle increases by $2\theta$ every time. Then, in order to get to $\theta^{\prime} = \frac{\pi}{2}$ (which corresponds to $\ket a$), it takes approximately
+After one iteration, the new angle becomes $\theta + 2 \theta = 3 \theta$, and the angle increases by $2\theta$ every time. Thus, in order to get to $\theta^{\prime} = \frac{\pi}{2}$ (which corresponds to $\ket a$), it takes approximately
 \[\frac{\pi /2}{2 \theta} \approx \frac{\pi / 2}{2 / \sqrt{N}} = \frac{\pi}{4} \sqrt{N} = O(\sqrt{N})\]
 iterations. 
 
